--- a/DjangoGIF/useraccounts/templates/useraccounts/view.html
+++ b/DjangoGIF/useraccounts/templates/useraccounts/view.html
@@ -7,5 +7,11 @@
 
     <body>
         <h1> Hello {{ name }}!</h1>
+
+        <form action="/account/add-gif/" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit">
+        </form>
     </body>
 </html>
