--- a/DjangoGIF/useraccounts/templates/useraccounts/signup.html
+++ b/DjangoGIF/useraccounts/templates/useraccounts/signup.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-    <body>
-    Sign up for an account!
-        <form action="/account/create-account/" method="post">
-            {% csrf_token %}
-            {{ form }}
-            <input type="submit">
-        </form>
-    </body>
-</html>
+{% extends 'home/base.html' %}
+{% block content %}
+
+Sign up for an account!
+<form action="{% url 'useraccounts:create-account' %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" class="submit animate">
+</form>
+{% endblock %}
