--- a/DjangoGIF/static/css/main.css
+++ b/DjangoGIF/static/css/main.css
@@ -52,12 +52,17 @@ a {
 }
 
 form {
-	margin: 1em;
+	overflow: auto;
+}
+
+.edit-form input {
+	margin: .25em auto;
+	width: 90%;
 }
 
 input {
 	display: block;
-	margin: 1em;
+	margin: .5em 0;
 	padding: .25em;
 	border: .25em solid #99d0e0;
 	border-radius: .5em;
@@ -89,22 +94,45 @@ label {
 }
 
 /* Profile View Styles *********************************************************/
-#gif-grid {
+.gif-grid {
+	margin: .25em;
+	padding: .25em;
+}
+
+.tag-group {
+	display: inline-block;
 	margin: 1em;
 }
 
-#gif-grid p {
+.tag-name {
+
+}
+
+.gif-grid p {
 	font-family: 'Open Sans', sans-serif;
 	font-size: .75em;
 }
 
-.gif-grid-element {
+.gif-grid i:hover {
+	cursor: pointer;
+	color: #99d0e0;
+}
+
+.gif-grid-element {	
+	position: relative;
 	display: inline-block;
+	margin-top: .25em;
 	position: relative;
 	padding: .5em;
 	width: 10em;
 	border: .25em solid #99d0e0;
 	border-radius: 1em;
+}
+
+.delete {
+	position: absolute;
+	right: 0.5em;
+
 }
 
 .img-wrapper {
