--- a/DjangoGIF/apps/home/templates/home/base.html
+++ b/DjangoGIF/apps/home/templates/home/base.html
@@ -21,6 +21,8 @@
     <body>
     {% block content %}{% endblock %}
 
-    <script type="text/javascript" src="{% static '/static/js/main.js' %}">
+    <!-- JavaScripts -->
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
     </body>
 </html>
