--- a/DjangoGIF/apps/useraccounts/templates/useraccounts/view.html
+++ b/DjangoGIF/apps/useraccounts/templates/useraccounts/view.html
@@ -3,6 +3,7 @@
     <div class="container">
         {% if can_edit %}
         <h1> Hello {{ name }}!</h1>
+        <a href="{% url 'useraccounts:manage-tags' %}">Manage Tags</a>
         {% else %}
         <h1>{{ name }}'s Profile</h1>
         {% endif %}
@@ -18,14 +19,25 @@
                         </div>
                         <p>{{ object.label }}</p>
                         <p class="gif-date">Added: {{ object.created }}</p>
+
                         {% if can_edit %}
-                        <i class="fa fa-pencil-square-o edit animate"></i>
-                        <i class="fa fa-times delete animate"></i>
+                        <i class="fa fa-pencil-square-o edit-icon animate"></i>
+                        <i class="fa fa-times delete-icon animate"></i>
+                        <form action="{% url 'useraccounts:delete-gif' %}" method="post" class="delete-form">
+                            Delete GIF
+                            {% csrf_token %}
+                            <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
+                            <input type="submit" value="Delete GIF" class="submit delete animate">
+                            <div class="submit cancel animate">Cancel</div>
+                        </form>
+
                         <form action="{% url 'useraccounts:edit-gif' %}" method="post" class="edit-form">
+                            Edit GIF
+                            {% csrf_token %}
                             <input type="text" name="url" value="{{ object.url }}" placeholder="URL">
                             <input type="text" name="label" value="{{ object.label }}" placeholder="Label">
                             <input type="text" name="tags" value="{{ object.tag_names }}" placeholder="Tags">
-                            <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
+                            <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
                             <input type="submit" value="Edit GIF" class="submit animate">
                         </form>
                         {% endif %}
@@ -47,9 +59,27 @@
 
                 <p>{{ object.label }}</p>
                 <p class="gif-date">Added: {{ object.created }}</p>
+
                 {% if can_edit %}
-                <i class="fa fa-pencil-square-o edit animate"></i>
-                <i class="fa fa-times delete animate"></i>
+                <i class="fa fa-pencil-square-o edit-icon animate"></i>
+                <i class="fa fa-times delete-icon animate"></i>
+                <form action="{% url 'useraccounts:delete-gif' %}" method="post" class="delete-form">
+                    Delete GIF
+                    {% csrf_token %}
+                    <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
+                    <input type="submit" value="Delete GIF" class="submit delete animate">
+                    <div class="submit cancel animate">Cancel</div>
+                </form>
+
+                <form action="{% url 'useraccounts:edit-gif' %}" method="post" class="edit-form">
+                    Edit GIF
+                    {% csrf_token %}
+                    <input type="text" name="url" value="{{ object.url }}" placeholder="URL">
+                    <input type="text" name="label" value="{{ object.label }}" placeholder="Label">
+                    <input type="text" name="tags" value="{{ object.tag_names }}" placeholder="Tags">
+                    <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
+                    <input type="submit" value="Edit GIF" class="submit animate">
+                </form>
                 {% endif %}
             </div>
             {% endfor %}
