--- a/DjangoGIF/apps/useraccounts/templates/useraccounts/view.html
+++ b/DjangoGIF/apps/useraccounts/templates/useraccounts/view.html
@@ -39,16 +39,19 @@
                                 <div class="tag animate">
                                     <div class="tag-name">{{ tag.name }}</div>
                                     <i class="fa fa-trash-o delete-tag"></i>
-                                    <input class="remove-tag-input hidden" type="text" value="0">
+                                    <input class="remove-tag-input hidden" type="text" value=" ">
                                 </div>
                                 {% endfor %}
-                                <div class="add-tags animate">
-                                    <i class="fa fa-tag"></i>
-                                    Add Tags
+                                <div class="add-tags">
+                                    <div class="add-tags-title animate">
+                                        <i class="fa fa-tag"></i>
+                                        Add Tags
+                                        <input type="text" value="0" class="add-tags-input hidden">
+                                    </div>
                                 </div>
 
-                                <input class="add-tags-values " type="text" name="tags_to_add" value="">
-                                <input class="remove-tags-values hidden" type="text" name="tags_to_remove" value="0">
+                                <input class="add-tags-values" type="text" name="tags_to_add" value="">
+                                <input class="remove-tags-values" type="text" name="tags_to_remove" value="none">
                                 <input class="hidden" type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
                             </div>
 
@@ -86,12 +89,30 @@
                 </form>
 
                 <form action="{% url 'useraccounts:edit-gif' %}" method="post" class="edit-form">
-                    Edit GIF
                     {% csrf_token %}
                     <input type="text" name="label" value="{{ object.label }}" placeholder="Label">
-                    <input type="text" name="tags" value="{{ object.tag_names }}" placeholder="Tags">
-                    <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
-                    <input type="submit" value="Edit GIF" class="submit animate">
+                    <div class="tags">
+                        {% for tag in object.tags.all %}
+                        <div class="tag animate">
+                            <div class="tag-name">{{ tag.name }}</div>
+                            <i class="fa fa-trash-o delete-tag"></i>
+                            <input class="remove-tag-input hidden" type="text" value="0">
+                        </div>
+                        {% endfor %}
+                        <div class="add-tags">
+                            <div class="add-tags-title animate">
+                                <i class="fa fa-tag"></i>
+                                Add Tags
+                                <input type="text" value="0" class="add-tags-input hidden">
+                            </div>
+                        </div>
+
+                        <input class="add-tags-values hidden" type="text" name="tags_to_add" value="">
+                        <input class="remove-tags-values" type="text" name="tags_to_remove" value="none">
+                        <input class="hidden" type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
+                    </div>
+
+                    <input type="submit" value="Apply" class="submit animate">
                 </form>
                 {% endif %}
             </div>
